Fix button alignment for chrome

--- a/base/static/base/css/style.css
+++ b/base/static/base/css/style.css
@@ -888,7 +888,7 @@ footer .copyright {
 
 button.donate-button {
     padding: 0 25px;
-    margin: -4px 0 0 0;
+    margin: -2px 0 0 0;
     background-color: #ff0;
     font-weight: bold;
     text-transform: uppercase;
